# Neural-Network

./: .gitignore  CMakeLists.txt  LICENCE
App/: CMakeLists.txt
App/Include/: ganTrainer.hpp  ganUtils.hpp  interface.hpp  neuralNetworkUtils.hpp  styleGlobals.hpp  styleManager.hpp  trainer.hpp
App/src/: ganUtils.cpp  main.cpp  neuralNetworkUtils.cpp  styleGlobals.cpp
